tests/negative/gold/import2-test.gold
tests/negative/import2-test.toit:6:24: error: Ambiguous 'show' import for 'foo'
import .import2-b show foo
                       ^~~
tests/negative/import2-test.toit:5:24: note: First show of identifier 'foo'
import .import2-a show foo
                       ^~~
Compilation failed
